--- a/Lab1/app/src/main/AndroidManifest.xml
+++ b/Lab1/app/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/calc_icon"
         android:label="@string/app_name"
-
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab1"
+        android:theme="@style/SplashTheme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -18,7 +17,6 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
