--- a/Lab1/app/src/main/AndroidManifest.xml
+++ b/Lab1/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/calc_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/SplashTheme"
+        android:theme="@style/Theme.Lab1."
         tools:targetApi="31">
 
         <activity
@@ -30,7 +30,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-    </application
-        >
+    </application>
 
 </manifest>
