--- a/Lab1/gradle/libs.versions.toml
+++ b/Lab1/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ constraintlayout = "2.1.4"
 firebaseDatabase = "20.3.1"
 googleServices = "4.4.1"
 firebaseMessaging = "23.4.1"
+biometric = "1.1.0"
+securityCrypto = "1.0.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -22,6 +24,8 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+biometric = { group = "androidx.biometric", name = "biometric", version.ref = "biometric" }
+security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
